--- a/src/main/resources/jline/keybindings.properties
+++ b/src/main/resources/jline/keybindings.properties
@@ -2,13 +2,13 @@
 #    [key code]: [logical operation]
 
 # CTRL-A: move to the beginning of the line
-1: MOVE_TO_BEG
+^a: MOVE_TO_BEG
 
 # CTRL-B: move to the previous character
-2: PREV_CHAR
+^b: PREV_CHAR
 
 # CTRL-D: close out the input stream
-4: EXIT
+^d: EXIT
 
 # CTRL-E: move the cursor to the end of the line
 5: MOVE_TO_END
@@ -59,4 +59,6 @@
 
 # DELETE, CTRL-?: delete the previous character
 # 127 is the ASCII code for delete
-127: DELETE_PREV_CHAR
+127: DELETE_NEXT_CHAR
+
+^[b: PREV_WORD
